Just to attempt to fix Overflow

--- a/social-links-profile-main/index.css
+++ b/social-links-profile-main/index.css
@@ -8,6 +8,7 @@ body{
     justify-self: center;
     align-items: center;
     align-content: center;
+    max-width: 100vw;
     /* text-align: center;
     display: flex;
     align-items: center;
